--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   </head>
   <body>
-	  <canvas id='root'></canvas>
+    <canvas id='root'></canvas>
+    <div id="full_screen"><span id="full_screen_text">yt - Copyright &copy; Yener Tuz www.yenertuz.com 2019</span></div>
 	<hr>
 	  <footer style="text-align: center">
 			<img class="clickable" src="assets/logo_with_name.png" width="200px" height="40px"
