--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   <body>
     <canvas id='root'></canvas>
     <div id="full_screen"><span id="full_screen_text">yt - Copyright &copy; Yener Tuz www.yenertuz.com 2019</span></div>
-	<hr>
+    <div id="arrow-div">
+    <img id="arrow-img" src="assets/game_arrows.png">
+    </div>
+    <hr>
 	  <footer style="text-align: center">
 			<img class="clickable" src="assets/logo_with_name.png" width="200px" height="40px"
 			onClick="location.assign('https://www.yenertuz.com')"/>
