raise arrow controller

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <canvas id='root'></canvas>
     <div id="full_screen"><span id="full_screen_text">yt - Copyright &copy; Yener Tuz www.yenertuz.com 2019</span></div>
     <div id="arrow-div">
+      <div id="up-arrow"></div>
+      <div id="down-arrow"></div>
+      <div id="left-arrow"></div>
+      <div id="right-arrow"></div>
     <img id="arrow-img" src="assets/game_arrows.png">
     </div>
     <hr>
