changed the copyright notice

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <canvas id='root'></canvas>
-    <div id="full_screen"><span id="full_screen_text">yt - Copyright &copy; Yener Tuz www.yenertuz.com 2019</span></div>
+    <div id="full_screen"><span id="full_screen_text">Copyright &copy; Yener Tuz www.yenertuz.com 2019</span></div>
     <div id="arrow-div">
     <img id="arrow-img" src="assets/game_arrows.png">
     </div>
