--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <hr>
 	  <footer style="text-align: center">
 			<img class="clickable" src="assets/logo_with_name.png" width="200px" height="40px"
-			onClick="location.assign('https://www.yenertuz.com')"/>
+			onClick="location.assign('https://www.yenertuz.com') style="cursor: pointer; margin-bottom: 10px"/>
 			<br>Copyright &copy; Yener Tuz www.yenertuz.com 2019</footer>
   </body>
   <script src="bundle.js"></script>
